# ear-training

./: LICENSE  README.md  pyproject.toml
notebooks/: Ear-Training-POC.ipynb
resources/: note_data.json
resources/sounds/piano/: _readme_and_license.txt
