[tool.poetry]
name = "ear-training"
version = "0.1.0"
description = ""
authors = ["Anthony D'Achille <adachille@hubspot.com>"]
readme = "README.md"
packages = [{include = "ear_training"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
