[tool.poetry]
name = "ear-training"
version = "0.1.0"
description = ""
authors = ["Anthony D'Achille <adachille@hubspot.com>"]
readme = "README.md"
packages = [{include = "ear_training"}]

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
jupyter-copilot = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
